--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="img/logo.png" alt="">
     </div>
     
-    <section class="products">
+    <section class="products col-md-3">
         
         <h3>Ericsson Product Code</h3> <br>
 
