--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     copyText.select();
     copyText.setSelectionRange(0, 99999)
     document.execCommand("copy");
-    alert("Copied Done: " + copyText.value);
+    alert("Copied Done: ");
     }
     </script>
 
